--- a/frontend-master/src/components/SignIn.css
+++ b/frontend-master/src/components/SignIn.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("D:\Project_HMS\dhms\frontend-master\src\components\background1.jpg");
+     background-image : url("./background1.jpg");
    
    
   }
